// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gotoScene goto scene 1`] = `
Object {
  "name": "cantina",
  "sceneContent": Array [
    Object {
      "content": Array [
        Object {
          "content": "Cantina",
          "type": "text",
        },
      ],
      "level": 2,
      "type": "heading",
    },
    Object {
      "content": Array [
        Object {
          "content": " show playedCount ",
          "type": "text",
        },
      ],
      "type": "dynamic",
    },
    Object {
      "content": Array [
        Object {
          "content": " time you come here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "The cantina is full with your crew having a good time",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "They are singing ",
          "type": "text",
        },
        Object {
          "content": "'oh my captain",
          "type": "text",
        },
        Object {
          "content": "' for the ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": " show playedCount ",
              "type": "text",
            },
          ],
          "type": "dynamic",
        },
        Object {
          "content": " times",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "You pick up a sandwich an put it in your bag ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": " bag sandwich 1 ",
              "type": "text",
            },
          ],
          "type": "setter",
        },
      ],
      "type": "paragraph",
    },
  ],
}
`;

exports[`player increment cantina scene played on second cantina move 1`] = `
Array [
  Object {
    "name": "choose_your_story",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  Object {
    "name": "the_space_ship",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "the_space_ship",
      "played": Object {
        "the_space_ship": 1,
      },
    },
  },
  Object {
    "name": "cantina",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Cantina",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": "1",
        "type": "text",
      },
      Object {
        "content": Array [
          Object {
            "content": " time you come here",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "The cantina is full with your crew having a good time",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "They are singing ",
            "type": "text",
          },
          Object {
            "content": "'oh my captain",
            "type": "text",
          },
          Object {
            "content": "' for the ",
            "type": "text",
          },
          Object {
            "content": "1",
            "type": "text",
          },
          Object {
            "content": " times",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "You pick up a sandwich an put it in your bag ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " bag sandwich 1 ",
                "type": "text",
              },
            ],
            "type": "setter",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "cantina",
      "played": Object {
        "cantina": 1,
        "the_space_ship": 1,
      },
    },
  },
  Object {
    "name": "cantina",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Cantina",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": "2",
        "type": "text",
      },
      Object {
        "content": Array [
          Object {
            "content": " time you come here",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "The cantina is full with your crew having a good time",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "They are singing ",
            "type": "text",
          },
          Object {
            "content": "'oh my captain",
            "type": "text",
          },
          Object {
            "content": "' for the ",
            "type": "text",
          },
          Object {
            "content": "2",
            "type": "text",
          },
          Object {
            "content": " times",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "You pick up a sandwich an put it in your bag ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " bag sandwich 1 ",
                "type": "text",
              },
            ],
            "type": "setter",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "cantina",
      "played": Object {
        "cantina": 2,
        "the_space_ship": 1,
      },
    },
  },
]
`;

exports[`player increment the spaceship scene played spaceship move 1`] = `
Array [
  Object {
    "name": "choose_your_story",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  Object {
    "name": "the_space_ship",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "the_space_ship",
      "played": Object {
        "the_space_ship": 1,
      },
    },
  },
  Object {
    "name": "cantina",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Cantina",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": "1",
        "type": "text",
      },
      Object {
        "content": Array [
          Object {
            "content": " time you come here",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "The cantina is full with your crew having a good time",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "They are singing ",
            "type": "text",
          },
          Object {
            "content": "'oh my captain",
            "type": "text",
          },
          Object {
            "content": "' for the ",
            "type": "text",
          },
          Object {
            "content": "1",
            "type": "text",
          },
          Object {
            "content": " times",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "You pick up a sandwich an put it in your bag ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " bag sandwich 1 ",
                "type": "text",
              },
            ],
            "type": "setter",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "cantina",
      "played": Object {
        "cantina": 1,
        "the_space_ship": 1,
      },
    },
  },
  Object {
    "name": "cantina",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Cantina",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": "2",
        "type": "text",
      },
      Object {
        "content": Array [
          Object {
            "content": " time you come here",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "The cantina is full with your crew having a good time",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "They are singing ",
            "type": "text",
          },
          Object {
            "content": "'oh my captain",
            "type": "text",
          },
          Object {
            "content": "' for the ",
            "type": "text",
          },
          Object {
            "content": "2",
            "type": "text",
          },
          Object {
            "content": " times",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "You pick up a sandwich an put it in your bag ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " bag sandwich 1 ",
                "type": "text",
              },
            ],
            "type": "setter",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "cantina",
      "played": Object {
        "cantina": 2,
        "the_space_ship": 1,
      },
    },
  },
  Object {
    "name": "the_space_ship",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "the_space_ship",
      "played": Object {
        "cantina": 2,
        "the_space_ship": 2,
      },
    },
  },
]
`;

exports[`player play book introduction if no actions 1`] = `
Array [
  Object {
    "name": "choose_your_story",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
]
`;

exports[`player play cantina scene on cantina target 1`] = `
Array [
  Object {
    "name": "choose_your_story",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  Object {
    "name": "the_space_ship",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "the_space_ship",
      "played": Object {
        "the_space_ship": 1,
      },
    },
  },
  Object {
    "name": "cantina",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Cantina",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": "1",
        "type": "text",
      },
      Object {
        "content": Array [
          Object {
            "content": " time you come here",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "The cantina is full with your crew having a good time",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "They are singing ",
            "type": "text",
          },
          Object {
            "content": "'oh my captain",
            "type": "text",
          },
          Object {
            "content": "' for the ",
            "type": "text",
          },
          Object {
            "content": "1",
            "type": "text",
          },
          Object {
            "content": " times",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "You pick up a sandwich an put it in your bag ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " bag sandwich 1 ",
                "type": "text",
              },
            ],
            "type": "setter",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "cantina",
      "played": Object {
        "cantina": 1,
        "the_space_ship": 1,
      },
    },
  },
]
`;

exports[`player play first scene on start move and add state.played with first_scene: 1 1`] = `
Array [
  Object {
    "name": "choose_your_story",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  Object {
    "name": "the_space_ship",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
    "state": Object {
      "currentSceneName": "the_space_ship",
      "played": Object {
        "the_space_ship": 1,
      },
    },
  },
]
`;
